--- a/tools/indexer/example/Cargo.toml
+++ b/tools/indexer/example/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 actix = "0.9"
+clap = "3.0.0-beta.1"
 serde_json = "1.0.55"
 tokio = { version = "0.2", features = ["sync"] }
 tracing-subscriber = "0.2.4"
