--- a/tools/indexer/example/Cargo.toml
+++ b/tools/indexer/example/Cargo.toml
@@ -7,8 +7,12 @@ edition = "2018"
 [dependencies]
 actix = "0.9"
 clap = "3.0.0-beta.1"
+openssl-probe = { version = "0.1.2" }
 serde_json = "1.0.55"
 tokio = { version = "0.2", features = ["sync"] }
 tracing-subscriber = "0.2.4"
 
 near-indexer = { path = "../../../chain/indexer" }
+
+[patch.crates-io]
+openssl-probe = { git = "https://github.com/khorolets/openssl-probe.git", branch="feature/support-macports" }
