--- a/tools/indexer/example/Cargo.toml
+++ b/tools/indexer/example/Cargo.toml
@@ -14,5 +14,7 @@ tracing-subscriber = "0.2.4"
 
 near-indexer = { path = "../../../chain/indexer" }
 
+# Patched version needed unless 0.1.3 or 0.2.0 is published
+# See conversation https://github.com/alexcrichton/openssl-probe/pull/15
 [patch.crates-io]
 openssl-probe = { git = "https://github.com/khorolets/openssl-probe.git", branch="feature/support-macports" }
